css/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  height: 100vh;
  font-family: 'Montserrat', sans-serif;
}

main{
  height: calc(100% - 80px);
  background-color: #141922;
  display: flex;
  width: 100%;
}

aside{
  height: 100%;
  width: 200px;
  background-color: #000;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

/* Mix */
.white-txt{
  color: #fff;
  font-weight: bold;
}
.grey-txt{
  color: #666666;
  font-weight: bold;
}

.row{
  display: flex;
  align-items: center;
}

aside p{
  font-size: 14px;
}
/* Mix */

/* Logo */
.logo{
  display: flex;
  align-items: center;
}

.logo .fa-spotify{
  font-size: 40px;
  padding: 10px;
}

.logo .logo-text{
  font-size: 20px;
}
/* /Logo */

/* Top Navbar */
.top-nav{
  margin-left: 13px;
}

.top-nav img{
  width: 45px;
}
/* /Top Navbar */

/* Central Navbar */
.central-nav{
  margin-left: 24px;
  overflow: auto;
  margin-top: 15px;
}

.central-nav .fa-plus{
  font-size: 20px;
  color: #000;
  background-color: #D2D2D2;
  padding: 10px;
  margin-right: 10px;
}

.column{
  display: flex;
  flex-direction: column;
  margin-top: 10px;
}

.column li{
  padding-bottom: 7px;
}
/* /Central Navbar */

/* Bottom Navbar */
.bottom-nav{
  margin-left: 15px;
  margin-top: auto;
}

.bottom-nav .fa-arrow-circle-down,
.bottom-nav .fa-user{
  padding-left: 10px;
  margin-right: 10px;
  font-size: 12px;
}

hr{
  margin: 5px 20px 5px 10px;
}

.bottom-nav .row:last-of-type{
  margin-bottom: 10px;
}
/* /Bottom Navbar */

/* Main Content */
.main-content{
  width: calc(100% - 200px);
}
/* Banner */
.banner{
  display: flex;
  justify-content: flex-end;
  background-color: rgba(8, 11, 18, 0.5);
  /* position: fixed;
  top: 0;
  right: 0px;
  left: 200px; */
}

.main-content .btn{
  margin: 20px 5px;
  background-color: rgba(8, 11, 18, 0.5);
  border: 1px solid white;
  font-size: 10px;
  padding: 10px 20px;
  border-radius: 15px;
}
/* /Banner */
/* Inner-content */
.inner-content{
  height: calc(100% - 80px);
  overflow: auto;
}

.categories{
  text-align: center;
  margin-top: 15px;
}

.categories li{
  padding: 8px;
  color: #7D7F84;
  font-weight: bold;
  font-size: 15px;
  display: inline-block;
}

.underline::after {
  content: "";
  display: block;
  width: 30px;
  height: 2px;
  background-color: #ADFF2F;
  margin: auto;
  margin-top: 2px;
}

.container{
  margin-left: 10px;
  margin-top: 80px;
}

.container:first-of-type{
  margin-top: 20px;
}

.carousel{
  display: flex;
  flex-wrap: wrap;
  margin-top: 15px;
}

.artist-album{
  position: relative;
  margin-right: 15px;
  text-align: center;
}

.artist-img{
  width: 150px;
  height: 150px;
  margin-bottom: 10px;
}

.overlay{
  background-color: rgba(0, 0, 0, 0.5);
  position: absolute;
  top: 0;
  left: 0;
  bottom: 14px;
  right: 0;
  display: none;
}

.overlay .fa-play-circle{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #fff;
  font-size: 50px;
}

.artist-album:hover .overlay{
  display: block;
  cursor: pointer;
}

.container p{
  font-size: 10px;
  font-weight: bold;
  color: #7D7F84;
  margin-top: 5px;
}

.artist-img.circle{
  width: 150px;
  height: 150px;
  border-radius: 100%;
  background-color: #141922;
}

.overlay.overlay-circle{
  border-radius: 100%;
}
/* /Inner Content */
/* /Main Content */

/* Footer */
footer{
  height: 80px;
  background-color: #282828;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 12px;
}

.footer-left{
  display: flex;
  align-items: center;
  margin-left: 10px;
}

.footer-left img{
  width: 40px;
  margin-right: 10px;
}

.artist-playing{
  margin-right: 30px;
}

.footer-left .fa-heart,
.footer-left .fa-folder{
  font-size: 15px;
  color: #666666;
  padding: 10px;
}

.footer .player-control{
  display: flex;
  flex-direction: column;
}





/* /Footer */

